# IntelSysLabs

./: .gitignore
IntelSysLab01/: CMakeLists.txt  backSearch.cpp  bidirectional.cpp  main.cpp  tree_search.h
IntelSysLab02/: Algorithms.cpp  Algorithms.h  CMakeLists.txt  Heuristics.cpp  Heuristics.h  Main.cpp  Node.h
IntelSysLab03/: CMakeLists.txt  SudokuSolver.cpp  SudokuSolver.h  main.cpp  set.h
IntelSysLab04/: CMakeLists.txt  othelloMinimaxGameClass.cpp
IntelSysLab05/: IntelSysLab05.sln
IntelSysLab05/IntelSysLab05/: Form1.Designer.cs  Form1.cs  IntelSysLab05.csproj  Program.cs  produktsionnaya_model.txt  rules.txt
IntelSysLab05/IntelSysLab05/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
IntelSysLab06/: ClipsFormsExample.Designer.cs  ClipsFormsExample.cs  ClipsFormsExample.csproj  OldRulesReader.cs  head.clp  new_fixed.clp  rules.clp
IntelSysLab06/Properties/: Resources.Designer.cs
IntelSysLab07/: IntelSysLab07.sln
IntelSysLab07/NeuralNetwork1/: Form1.Designer.cs  Form1.cs  Neural.cs
IntelSysLab08/: PaternRecognition.sln
IntelSysLab08/Numbers/: Form1.cs
IntelSysLab09/: ClipsFormsExample.Designer.cs  ClipsFormsExample.cs  ClipsFormsExample.csproj  ConfidenceDialog.Designer.cs  ConfidenceDialog.cs  OldRulesReader.cs  head.clp  rules.clp
IntelSysLab09/Properties/: Settings.Designer.cs
IntelSysLab10/: .gitignore
IntelSysLab10/NeuralNetwork1/: AccordNet.cs  Camera.cs  Form1.Designer.cs  Form1.cs  ImageGenerator.cs  Neural.cs  NeuralNetwork1.csproj  TLGBotik.cs  packages.config
